fix border alignment

--- a/docs/assets/css/secondary-nav.less
+++ b/docs/assets/css/secondary-nav.less
@@ -173,7 +173,8 @@
         }
 
         &.content__1-3 .content_wrapper:before {
-            margin-right: -20px; // magic numbers are fun
+            margin-right: -22px; // magic numbers are fun
+            border-right: 1px solid @content_sidebar-bg;
         }
 
     });
